# hass-blueprints

./: PLAN.md  main.py  pyproject.toml
blueprints/automation/: fenster_heizung.yaml
tests/: fenster_heizung_test.py
